adv overflow fix

--- a/css/adv.css
+++ b/css/adv.css
@@ -1,4 +1,4 @@
-body {
+html,body {
   overflow: hidden;
 }
 
@@ -7,11 +7,13 @@ body {
   top: 100%;
   margin: 0;
   width: 300px;
-  height: 290px;
+  height: 0;
+  overflow: hidden;
+  /*height: 290px;*/
   border-radius: 4px;
   background: rgba(255,255,255,0.7);
-  -webkit-transition: all 1s;
-  transition: all 1s;
+  -webkit-transition: top 1s;
+  transition: top 1s;
 }
 
 #adv .close-button {
